comptest/parser.output
State 51 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: block

    2 block: decl_list stmt_list

    3 decl_list: %empty
    4          | decl_list decl

    5 decl: "var" T_id ':' type

    6 type: "int"
    7     | "bool"

    8 stmt_list: %empty
    9          | stmt_list stmt

   10 stmt: "let" T_id '=' expr
   11     | "print" expr
   12     | "for" expr "do" stmt
   13     | "if" expr "then" stmt
   14     | "if" expr "then" stmt "else" stmt
   15     | "begin" block "end"

   16 expr: T_id
   17     | T_const
   18     | '(' expr ')'
   19     | expr '+' expr
   20     | expr '-' expr
   21     | expr '*' expr
   22     | expr '/' expr
   23     | expr '%' expr
   24     | expr '=' expr
   25     | expr '<' expr
   26     | expr '>' expr


Terminals, with rules where they appear

    $end (0) 0
    '%' <op> (37) 23
    '(' (40) 18
    ')' (41) 18
    '*' <op> (42) 21
    '+' <op> (43) 19
    '-' <op> (45) 20
    '/' <op> (47) 22
    ':' (58) 5
    '<' <op> (60) 25
    '=' <op> (61) 10 24
    '>' <op> (62) 26
    error (256)
    "for" (258) 12
    "print" (259) 11
    "let" (260) 10
    "if" (261) 13 14
    "then" (262) 13 14
    "else" (263) 14
    "do" (264) 12
    "begin" (265) 15
    "end" (266) 15
    "var" (267) 5
    "int" (268) 6
    "bool" (269) 7
    T_id <var> (270) 5 10 16
    T_const <num> (271) 17


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program <block> (29)
        on left: 1
        on right: 0
    block <block> (30)
        on left: 2
        on right: 1 15
    decl_list <block> (31)
        on left: 3 4
        on right: 2 4
    decl <decl> (32)
        on left: 5
        on right: 4
    type <type> (33)
        on left: 6 7
        on right: 5
    stmt_list <block> (34)
        on left: 8 9
        on right: 2 9
    stmt <stmt> (35)
        on left: 10 11 12 13 14 15
        on right: 9 12 13 14
    expr <expr> (36)
        on left: 16 17 18 19 20 21 22 23 24 25 26
        on right: 10 11 12 13 14 18 19 20 21 22 23 24 25 26


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (decl_list)

    program    go to state 1
    block      go to state 2
    decl_list  go to state 3


State 1

    0 $accept: program . $end

    $end  shift, and go to state 4


State 2

    1 program: block .

    $default  reduce using rule 1 (program)


State 3

    2 block: decl_list . stmt_list
    4 decl_list: decl_list . decl

    "var"  shift, and go to state 5

    $default  reduce using rule 8 (stmt_list)

    decl       go to state 6
    stmt_list  go to state 7


State 4

    0 $accept: program $end .

    $default  accept


State 5

    5 decl: "var" . T_id ':' type

    T_id  shift, and go to state 8


State 6

    4 decl_list: decl_list decl .

    $default  reduce using rule 4 (decl_list)


State 7

    2 block: decl_list stmt_list .
    9 stmt_list: stmt_list . stmt

    "for"    shift, and go to state 9
    "print"  shift, and go to state 10
    "let"    shift, and go to state 11
    "if"     shift, and go to state 12
    "begin"  shift, and go to state 13

    $default  reduce using rule 2 (block)

    stmt  go to state 14


State 8

    5 decl: "var" T_id . ':' type

    ':'  shift, and go to state 15


State 9

   12 stmt: "for" . expr "do" stmt

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 19


State 10

   11 stmt: "print" . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 20


State 11

   10 stmt: "let" . T_id '=' expr

    T_id  shift, and go to state 21


State 12

   13 stmt: "if" . expr "then" stmt
   14     | "if" . expr "then" stmt "else" stmt

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 22


State 13

   15 stmt: "begin" . block "end"

    $default  reduce using rule 3 (decl_list)

    block      go to state 23
    decl_list  go to state 3


State 14

    9 stmt_list: stmt_list stmt .

    $default  reduce using rule 9 (stmt_list)


State 15

    5 decl: "var" T_id ':' . type

    "int"   shift, and go to state 24
    "bool"  shift, and go to state 25

    type  go to state 26


State 16

   16 expr: T_id .

    $default  reduce using rule 16 (expr)


State 17

   17 expr: T_const .

    $default  reduce using rule 17 (expr)


State 18

   18 expr: '(' . expr ')'

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 27


State 19

   12 stmt: "for" expr . "do" stmt
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    "do"  shift, and go to state 28
    '='   shift, and go to state 29
    '<'   shift, and go to state 30
    '>'   shift, and go to state 31
    '+'   shift, and go to state 32
    '-'   shift, and go to state 33
    '*'   shift, and go to state 34
    '/'   shift, and go to state 35
    '%'   shift, and go to state 36


State 20

   11 stmt: "print" expr .
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    '='  shift, and go to state 29
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 11 (stmt)


State 21

   10 stmt: "let" T_id . '=' expr

    '='  shift, and go to state 37


State 22

   13 stmt: "if" expr . "then" stmt
   14     | "if" expr . "then" stmt "else" stmt
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    "then"  shift, and go to state 38
    '='     shift, and go to state 29
    '<'     shift, and go to state 30
    '>'     shift, and go to state 31
    '+'     shift, and go to state 32
    '-'     shift, and go to state 33
    '*'     shift, and go to state 34
    '/'     shift, and go to state 35
    '%'     shift, and go to state 36


State 23

   15 stmt: "begin" block . "end"

    "end"  shift, and go to state 39


State 24

    6 type: "int" .

    $default  reduce using rule 6 (type)


State 25

    7 type: "bool" .

    $default  reduce using rule 7 (type)


State 26

    5 decl: "var" T_id ':' type .

    $default  reduce using rule 5 (decl)


State 27

   18 expr: '(' expr . ')'
   19     | expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    '='  shift, and go to state 29
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    ')'  shift, and go to state 40


State 28

   12 stmt: "for" expr "do" . stmt

    "for"    shift, and go to state 9
    "print"  shift, and go to state 10
    "let"    shift, and go to state 11
    "if"     shift, and go to state 12
    "begin"  shift, and go to state 13

    stmt  go to state 41


State 29

   24 expr: expr '=' . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 42


State 30

   25 expr: expr '<' . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 43


State 31

   26 expr: expr '>' . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 44


State 32

   19 expr: expr '+' . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 45


State 33

   20 expr: expr '-' . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 46


State 34

   21 expr: expr '*' . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 47


State 35

   22 expr: expr '/' . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 48


State 36

   23 expr: expr '%' . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 49


State 37

   10 stmt: "let" T_id '=' . expr

    T_id     shift, and go to state 16
    T_const  shift, and go to state 17
    '('      shift, and go to state 18

    expr  go to state 50


State 38

   13 stmt: "if" expr "then" . stmt
   14     | "if" expr "then" . stmt "else" stmt

    "for"    shift, and go to state 9
    "print"  shift, and go to state 10
    "let"    shift, and go to state 11
    "if"     shift, and go to state 12
    "begin"  shift, and go to state 13

    stmt  go to state 51


State 39

   15 stmt: "begin" block "end" .

    $default  reduce using rule 15 (stmt)


State 40

   18 expr: '(' expr ')' .

    $default  reduce using rule 18 (expr)


State 41

   12 stmt: "for" expr "do" stmt .

    $default  reduce using rule 12 (stmt)


State 42

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   24     | expr '=' expr .
   25     | expr . '<' expr
   26     | expr . '>' expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 24 (expr)


State 43

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   25     | expr '<' expr .
   26     | expr . '>' expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 25 (expr)


State 44

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr
   26     | expr '>' expr .

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 26 (expr)


State 45

   19 expr: expr . '+' expr
   19     | expr '+' expr .
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 19 (expr)


State 46

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   20     | expr '-' expr .
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 20 (expr)


State 47

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   21     | expr '*' expr .
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    $default  reduce using rule 21 (expr)


State 48

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   22     | expr '/' expr .
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    $default  reduce using rule 22 (expr)


State 49

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   23     | expr '%' expr .
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    $default  reduce using rule 23 (expr)


State 50

   10 stmt: "let" T_id '=' expr .
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | expr . '=' expr
   25     | expr . '<' expr
   26     | expr . '>' expr

    '='  shift, and go to state 29
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 10 (stmt)


State 51

   13 stmt: "if" expr "then" stmt .
   14     | "if" expr "then" stmt . "else" stmt

    "else"  shift, and go to state 52

    "else"    [reduce using rule 13 (stmt)]
    $default  reduce using rule 13 (stmt)


State 52

   14 stmt: "if" expr "then" stmt "else" . stmt

    "for"    shift, and go to state 9
    "print"  shift, and go to state 10
    "let"    shift, and go to state 11
    "if"     shift, and go to state 12
    "begin"  shift, and go to state 13

    stmt  go to state 53


State 53

   14 stmt: "if" expr "then" stmt "else" stmt .

    $default  reduce using rule 14 (stmt)
